- add landscape layout variant for monitor activity - modify load frame method - fix bug accidental click on background frames

--- a/EkgDroid/app/src/main/res/values/strings.xml
+++ b/EkgDroid/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="btn_change_data">Data Pasien</string>
     <string name="app_name">Mobile Ecg</string>
     <string name="lbl_User">Username</string>
+    <string name="lbl_mail">E-Mail</string>
+    <string name="btn_setting">SETTING</string>
+    <string name="lbl_dokter">Dokter Jaga</string>
+    <string name="btn_tambah">Tambah Data</string>
+    <string name="btn_batal">Batal</string>
 </resources>
