--- a/EkgDroid/app/src/main/res/values/strings.xml
+++ b/EkgDroid/app/src/main/res/values/strings.xml
@@ -49,4 +49,14 @@
     <string name="lbl_bdate">Tanggal Lahir</string>
     <string name="lbl_reg_bloodType">Gol. Darah</string>
     <string name="lbl_pBloodType">Gol. Darah</string>
+
+    <string name="info_noConnection">Tidak ada koneksi !</string>
+    <string name="info_dataNotFound">Data tidak ditemukan !</string>
+    <string name="info_notMatch">Password Salah !</string>
+    <string name="lbl_diag_qt">QT</string>
+    <string name="lbl_diag_pr">PR</string>
+    <string name="test_range_ms">500 - 500 (ms)</string>
+    <string name="test_numb_500">500</string>
+    <string name="lbl_diag_qrs">QRS</string>
+    <string name="lbl_diag_rr">RR</string>
 </resources>
