only userType : "Dokter" can view all data record, while "User" can only view their own data record

--- a/EkgDroid/app/src/main/res/values/strings.xml
+++ b/EkgDroid/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="test_numb_500">500</string>
     <string name="lbl_diag_qrs">QRS</string>
     <string name="lbl_diag_rr">RR</string>
+    <string name="btn_pasangDokter">Pasang Dokter</string>
 </resources>
