--- a/EkgDroid/app/src/main/res/values/strings.xml
+++ b/EkgDroid/app/src/main/res/values/strings.xml
@@ -61,4 +61,9 @@
     <string name="lbl_diag_rr">RR</string>
     <string name="btn_pasangDokter">Pasang Dokter</string>
     <string name="btn_change_user">Ganti User</string>
+    <string name="lbl_PRInt">PR Interval</string>
+    <string name="lbl_QTInt">QT Interval</string>
+    <string name="lbl_QRSInt">QRS Interval</string>
+    <string name="lbl_RRInt">RR Interval/Heart Beat</string>
+    <string name="btn_close">TUTUP</string>
 </resources>
