--- a/EkgDroid/app/src/main/res/values/strings.xml
+++ b/EkgDroid/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="info_noConnection">Tidak ada koneksi !</string>
     <string name="info_dataNotFound">Data tidak ditemukan !</string>
     <string name="info_notMatch">Password Salah !</string>
-    <string name="info_noDevice">Alat belom terpasang !</string>
+    <string name="info_noDevice">Alat belum terpasang !</string>
 
     <string name="lbl_diag_qt">QT</string>
     <string name="lbl_diag_pr">PR</string>
